Revise README for ticketing system project
Updated project description and structure in README.